--- a/src/spotlight.html
+++ b/src/spotlight.html
@@ -21,15 +21,17 @@ limitations under the License.
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="Free Spotlight HTML Template">
     <meta name="author" content="Anthony Vick of Just A Guy Coding">
     <title>Spotlight</title>
 
     <!-- SEO - Change this to the master URL for the website. -->
     <link rel="canonical" href=" http://justaguycoding.com/free/templates/spotlight_html">
 
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&family=Raleway&family=Sanchez&display=swap" rel="stylesheet">
 
+    <style>
+        @font-face{font-family:Montserrat;font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local('Montserrat-Regular'),url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459WRhyzbi.woff2) format('woff2');unicode-range:U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F}@font-face{font-family:Montserrat;font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local('Montserrat-Regular'),url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459W1hyzbi.woff2) format('woff2');unicode-range:U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116}@font-face{font-family:Montserrat;font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local('Montserrat-Regular'),url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459WZhyzbi.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+1EA0-1EF9,U+20AB}@font-face{font-family:Montserrat;font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local('Montserrat-Regular'),url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459Wdhyzbi.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:Montserrat;font-style:normal;font-weight:400;font-display:swap;src:local('Montserrat Regular'),local('Montserrat-Regular'),url(https://fonts.gstatic.com/s/montserrat/v15/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:Oswald;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v35/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUtiZTaR.woff2) format('woff2');unicode-range:U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F}@font-face{font-family:Oswald;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v35/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUJiZTaR.woff2) format('woff2');unicode-range:U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116}@font-face{font-family:Oswald;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v35/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUliZTaR.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+1EA0-1EF9,U+20AB}@font-face{font-family:Oswald;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v35/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUhiZTaR.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:Oswald;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/oswald/v35/TK3_WkUHHAIjg75cFRf3bXL8LICs1_FvsUZiZQ.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}@font-face{font-family:Raleway;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCFPrEHJA.woff2) format('woff2');unicode-range:U+0460-052F,U+1C80-1C88,U+20B4,U+2DE0-2DFF,U+A640-A69F,U+FE2E-FE2F}@font-face{font-family:Raleway;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCMPrEHJA.woff2) format('woff2');unicode-range:U+0400-045F,U+0490-0491,U+04B0-04B1,U+2116}@font-face{font-family:Raleway;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCHPrEHJA.woff2) format('woff2');unicode-range:U+0102-0103,U+0110-0111,U+0128-0129,U+0168-0169,U+01A0-01A1,U+01AF-01B0,U+1EA0-1EF9,U+20AB}@font-face{font-family:Raleway;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCGPrEHJA.woff2) format('woff2');unicode-range:U+0100-024F,U+0259,U+1E00-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF}@font-face{font-family:Raleway;font-style:normal;font-weight:400;font-display:swap;src:url(https://fonts.gstatic.com/s/raleway/v18/1Ptxg8zYS_SKggPN4iEgvnHyvveLxVvaorCIPrE.woff2) format('woff2');unicode-range:U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD}
+    </style>
     <!-- Lodash templating - optionally include css link tags for static templates; optimised have css inlined. -->
     <% if (true == htmlWebpackPlugin.options.static) {
         %><%= htmlWebpackPlugin.tags.headTags %><%
@@ -80,7 +82,7 @@ limitations under the License.
           </nav>
 
         <div class="jumbotron feature-jumbotron p-4 p-md-5 text-white rounded bg-dark shadow-lg"
-            style="background-image: url(<%= require('./images/feature1.jpg') %>">
+            style="background-image: url(<%= require('./images/feature1.jpg') %>)">
             <div class="col-md-6 px-0">
                 <h1 class="display-4 font-italic">The Spotlight Template</h1>
                 <p class="lead my-3"><em>A simple, elegant HTML blog template built on Bootstrap 4.</em></p>
@@ -132,7 +134,7 @@ limitations under the License.
             </div>
         </div>
 
-        <main role="main">
+        <main>
             <div class="row">
                 <div class="col-md-8 blog-main">
 
@@ -145,7 +147,7 @@ limitations under the License.
 
                         <p>
                             Spotlight is a HTML blog template is provided free of charge, released under the <a href="https://choosealicense.com/licenses/apache-2.0/">
-                            Apache 2.0 License<a>.
+                            Apache 2.0 License</a>.
                         </p>
                         <p>
                             The Montserrat and Raleway fonts have been paired to create an easily readable, light and modern, blog.
@@ -215,7 +217,7 @@ limitations under the License.
                         <ul>
 
                             <li>Main feature photo by <a href="https://unsplash.com/@jannerboy62?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Nick Fewings</a></li>
-                            <li>Javascript feature photo  by <a href="https://unsplash.com/@rc820">Chirayu Trivedi</li>
+                            <li>Javascript feature photo  by <a href="https://unsplash.com/@rc820">Chirayu Trivedi</a></li>
                             <li>Webpack feature photo by <a href="https://unsplash.com/@br_am?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Bram.</a></li>
                             <li>Spot On photo by <a href="https://unsplash.com/@_masonsummers?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Mason Summers</a></li>
                             <li>Lighten Up post photo by <a href="https://unsplash.com/@oscartothekeys?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Oscar Keys</a></li>
@@ -241,7 +243,7 @@ limitations under the License.
                             <li><a href="#">Spot the lights</a></li>
                             <li><a href="#">Lighter than air</a></li>
                             <li><a href="#">Is it getting  dark?</a></li>
-                        </ol>
+                        </ul>
                     </div>
                 </aside>
             </div>
@@ -281,7 +283,7 @@ limitations under the License.
                 </div>
             </div>
         </footer>
-
-        <%= htmlWebpackPlugin.tags.bodyTags %>
-    </body>
+    </div>
+    <%= htmlWebpackPlugin.tags.bodyTags %>
+</body>
 </html>
